Offer download options per position, not per order

--- a/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
+++ b/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
@@ -1,8 +1,8 @@
 {% load i18n %}
 {% load eventurl %}
 {% for line in cart.positions %}
-    <div class="row-fluid cart-row">
-        <div class="col-md-4 col-xs-6">
+    <div class="row cart-row {% if download %}has-downloads{% endif %}">
+        <div class="product">
             <strong>{{ line.item.name }}</strong>
             {% if line.variation %}
                 – {{ line.variation }}
@@ -10,63 +10,77 @@
             {% if line.voucher %}
                 <br /><span class="fa fa-tags"></span> {% trans "Voucher code used:" %} {{ line.voucher.code }}
             {% endif %}
-        {% if line.has_questions %}
-            <dl>
-                {% if line.item.admission and event.settings.attendee_names_asked%}
-                    <dt>{% trans "Attendee name" %}</dt>
-                    <dd>{% if line.attendee_name %}{{ line.attendee_name }}{% else %}<em>{% trans "not answered" %}</em>{% endif %}</dd>
-                {% endif %}
-                {% for q in line.questions %}
-                    <dt>{{ q.question }}</dt>
-                    <dd>{% if q.answer %}{{ q.answer|linebreaksbr }}{% else %}<em>{% trans "not answered" %}</em>{% endif %}</dd>
-                {% endfor %}
-            </dl>
-        {% endif %}
-        </div>
-        <div class="col-md-2 col-xs-6 count">
-            {% if editable %}
-            <form action="{% eventurl event "presale:event.cart.remove" %}"
-                    method="post" data-asynctask>
-                {% csrf_token %}
 
-                {% if line.variation %}
-                    <input type="hidden" name="variation_{{ line.item.id }}_{{ line.variation.id }}"
-                            value="1" />
-                    <input type="hidden" name="price_{{ line.item.id }}_{{ line.variation.id }}"
-                            value="{{ line.price }}" />
-                {% else %}
-                    <input type="hidden" name="item_{{ line.item.id }}"
-                            value="1" />
-                    <input type="hidden" name="price_{{ line.item.id }}"
-                            value="{{ line.price }}" />
-                {% endif %}
-                <button class="btn btn-mini btn-link"><i class="fa fa-minus"></i></button>
-            </form>
-            {% endif %}
-            {{ line.count }}
-            {% if editable %}
-            <form action="{% eventurl event "presale:event.cart.add" %}"
-                method="post" data-asynctask>
-                {% csrf_token %}
-                {% if line.variation %}
-                    <input type="hidden" name="variation_{{ line.item.id }}_{{ line.variation.id }}"
-                        value="1" />
-                    <input type="hidden" name="price_{{ line.item.id }}_{{ line.variation.id }}"
-                            value="{{ line.price }}" />
-                {% else %}
-                    <input type="hidden" name="item_{{ line.item.id }}"
-                            value="1" />
-                    <input type="hidden" name="price_{{ line.item.id }}"
-                            value="{{ line.price }}" />
-                {% endif %}
-                <button class="btn btn-mini btn-link"><i class="fa fa-plus"></i></button>
-            </form>
+
+            {% if line.has_questions %}
+                <dl>
+                    {% if line.item.admission and event.settings.attendee_names_asked%}
+                        <dt>{% trans "Attendee name" %}</dt>
+                        <dd>{% if line.attendee_name %}{{ line.attendee_name }}{% else %}<em>{% trans "not answered" %}</em>{% endif %}</dd>
+                    {% endif %}
+                    {% for q in line.questions %}
+                        <dt>{{ q.question }}</dt>
+                        <dd>{% if q.answer %}{{ q.answer|linebreaksbr }}{% else %}<em>{% trans "not answered" %}</em>{% endif %}</dd>
+                    {% endfor %}
+                </dl>
             {% endif %}
         </div>
-        <div class="col-md-3 col-xs-6 price">
-            {{ event.currency }} {{ line.price|floatformat:2 }}
-        </div>
-        <div class="col-md-3 col-xs-6 price">
+
+        {% if download %}
+            <div class="download-desktop">
+                {% for b in download_buttons %}
+                    <a href="{% eventurl event "presale:event.order.download" secret=order.secret order=order.code output=b.identifier position=line.id %}"
+                            class="btn btn-default btn-sm">
+                        <span class="fa fa-download"></span> {{ b.text }}
+                    </a>
+                {% endfor %}
+            </div>
+        {% else %}
+            <div class="count">
+                {% if editable %}
+                <form action="{% eventurl event "presale:event.cart.remove" %}"
+                        method="post" data-asynctask>
+                    {% csrf_token %}
+
+                    {% if line.variation %}
+                        <input type="hidden" name="variation_{{ line.item.id }}_{{ line.variation.id }}"
+                                value="1" />
+                        <input type="hidden" name="price_{{ line.item.id }}_{{ line.variation.id }}"
+                                value="{{ line.price }}" />
+                    {% else %}
+                        <input type="hidden" name="item_{{ line.item.id }}"
+                                value="1" />
+                        <input type="hidden" name="price_{{ line.item.id }}"
+                                value="{{ line.price }}" />
+                    {% endif %}
+                    <button class="btn btn-mini btn-link"><i class="fa fa-minus"></i></button>
+                </form>
+                {% endif %}
+                {{ line.count }}
+                {% if editable %}
+                <form action="{% eventurl event "presale:event.cart.add" %}"
+                    method="post" data-asynctask>
+                    {% csrf_token %}
+                    {% if line.variation %}
+                        <input type="hidden" name="variation_{{ line.item.id }}_{{ line.variation.id }}"
+                            value="1" />
+                        <input type="hidden" name="price_{{ line.item.id }}_{{ line.variation.id }}"
+                                value="{{ line.price }}" />
+                    {% else %}
+                        <input type="hidden" name="item_{{ line.item.id }}"
+                                value="1" />
+                        <input type="hidden" name="price_{{ line.item.id }}"
+                                value="{{ line.price }}" />
+                    {% endif %}
+                    <button class="btn btn-mini btn-link"><i class="fa fa-plus"></i></button>
+                </form>
+                {% endif %}
+            </div>
+            <div class="singleprice price">
+                {{ event.currency }} {{ line.price|floatformat:2 }}
+            </div>
+        {% endif %}
+        <div class="totalprice price">
             <strong>{{ event.currency }} {{ line.total|floatformat:2 }}</strong>
             {% if line.tax_rate %}
                 <br /><small>{% blocktrans trimmed with rate=line.tax_rate %}
@@ -74,12 +88,22 @@
             {% endblocktrans %}</small>
             {% endif %}
         </div>
+        {% if download %}
+            <div class="download-mobile">
+                {% for b in download_buttons %}
+                    <a href="{% eventurl event "presale:event.order.download" secret=order.secret order=order.code output=b.identifier position=line.id %}"
+                       class="btn btn-default btn-sm">
+                        <span class="fa fa-download"></span> {{ b.text }}
+                    </a>
+                {% endfor %}
+            </div>
+        {% endif %}
         <div class="clearfix"></div>
     </div>
 {% endfor %}
 {% if cart.payment_fee %}
     {# TODO: Tax rate? #}
-    <div class="row-fluid cart-row">
+    <div class="row cart-row">
         <div class="col-md-4 col-xs-6">
             <strong>{% trans "Payment method fee" %}</strong>
         </div>
@@ -95,7 +119,7 @@
         <div class="clearfix"></div>
     </div>
 {% endif %}
-<div class="row-fluid cart-row total">
+<div class="row cart-row total">
     <div class="col-md-4 col-xs-6">
         <strong>{% trans "Total" %}</strong>
     </div>
