--- a/src/static/pretixpresale/scss/_event.scss
+++ b/src/static/pretixpresale/scss/_event.scss
@@ -61,7 +61,7 @@
     margin-bottom: 0;
 }
 
-.cart-row, .product-row {
+.product-row {
     padding: 10px 0;
 
     .count form {
@@ -78,15 +78,6 @@
 
     &.total {
         border-top: 1px solid $table-border-color;
-    }
-
-    dl {
-        padding-left: 20px;
-        margin-bottom: 0;
-
-        dd {
-            padding-left: 20px;
-        }
     }
 }
 .panel-contact dl {
