--- a/src/static/pretixpresale/scss/main.scss
+++ b/src/static/pretixpresale/scss/main.scss
@@ -4,6 +4,7 @@ $fa-font-path: static("fontawesome/fonts");
 @import "../../fontawesome/scss/font-awesome.scss";
 
 @import "_event.scss";
+@import "_cart.scss";
 @import "_forms.scss";
 
 footer {
