--- a/src/static/pretixpresale/scss/_event.scss
+++ b/src/static/pretixpresale/scss/_event.scss
@@ -67,7 +67,7 @@
     .count form {
         display: inline;
     }
-    .price, .count {
+    .price, .count, .download {
         text-align: right;
     }
     .price small,
