--- a/src/static/pretixpresale/scss/main.scss
+++ b/src/static/pretixpresale/scss/main.scss
@@ -1,11 +1,12 @@
+@import "../../pretixcontrol/scss/_variables.scss";
 @import "../../pretixbase/scss/colors.scss";
 @import "../../bootstrap/scss/_bootstrap.scss";
 $fa-font-path: static("fontawesome/fonts");
-$font-path: static("fonts");
 @import "../../fontawesome/scss/font-awesome.scss";
 
 @import "_event.scss";
 @import "_forms.scss";
+@import "../../pretixbase/scss/webfont.scss";
 
 footer {
     text-align: center;
