Fix #173 -- Context variables in sendmail plugin (#279)
* Add context variables to sendmail plugin
#173

* fixed date format

* add context variables to sendmail plugin

* timezone adjustment
#173

* partial preview

* preview raw message

* preview not formatted

* Add context variables to sendmail plugin. Add email preview
#173

* Add context variables to sendmail plugin. Add email preview for multiple locales
#173

* add context variables to sendmail plugin, and email preview for multiple locales
#173

* add context variables to sendmail plugin, and email preview for multiple locales

* order url link update
#173

--- a/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/send_form.html
+++ b/src/pretix/plugins/sendmail/templates/pretixplugins/sendmail/send_form.html
@@ -10,7 +10,28 @@
             {% bootstrap_field form.sendto layout='horizontal' %}
             {% bootstrap_field form.subject layout='horizontal' %}
             {% bootstrap_field form.message layout='horizontal' %}
+            {% if request.method == "POST" %}
+            <fieldset>
+            <legend>{% trans "E-mail preview" %}</legend>
+
+                <div class="panel-body">
+                    {% for locale, segments in output.items %}
+                    <p>
+                        <strong>{% blocktrans %}For locale: {{ locale }}{% endblocktrans %}</strong>
+                    </p>
+                        {% for value in segments %}
+                        <p>
+                            {{ value|linebreaksbr }}
+                        </p>
+                        {% endfor %}
+                    {% endfor %}
+                </div>
+            </fieldset>
+            {% endif %}
             <div class="form-group submit-group">
+                <button type="submit" class="btn btn-default btn-save pull-left" name="action" value="preview">
+                {% trans "Preview email" %}
+                </button>
                 <button type="submit" class="btn btn-primary btn-save">
                     {% trans "Send" %}
                 </button>
@@ -18,4 +39,3 @@
         </form>
     {% endblock %}
 {% endblock %}
-
