Fix #149 -- Add copying multiple tickets answers enhancement (#292)
* Added copying multiple tickets answers enhancement (#149)

* Copying of multiple tickets answers enhancement - review for #292 (#149)

* changed to button and removed unbinging

* Removed unused button id attribute - changes for PR #149

* Housekeeping

--- a/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
@@ -41,6 +41,7 @@
                     </div>
                 </div>
             {% endif %}
+            
             {% for form in forms %}
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -51,11 +52,16 @@
                                     – {{ form.pos.variation }}
                                 {% endif %}
                             </a>
+                            {% if forloop.counter > 1 %}
+                                <span class="text-right pull-right">
+                                     <input type="button" data-id="{{ forloop.counter0 }}" name="copy" class="js-copy-answers btn btn-block" value='{% trans "Copy answers from above" %}'> 
+                                </span>
+                            {% endif %}                           
                         </h4>
                     </div>
                     <div id="cp{{ form.pos.id }}"
                             class="panel-collapse collapsed in">
-                        <div class="panel-body">
+                        <div class="panel-body" data-idx="{{ forloop.counter0 }}">
                             {% bootstrap_form form layout="horizontal" %}
                         </div>
                     </div>
