--- a/src/static/pretixcontrol/scss/_variables.scss
+++ b/src/static/pretixcontrol/scss/_variables.scss
@@ -6,7 +6,7 @@ $gray-lighter: lighten(#000, 93.5%);
 $gray-lightest: lighten(#000, 97.25%);
 $font-family-sans-serif:  "Open Sans", "OpenSans", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $font-path: static("fonts");
-$brand-primary: #8E44B3;
+$brand-primary: #8E44B3 !default;
 $brand-success: #5cb85c;
 $brand-info: #5bc0de;
 $brand-warning: #f0ad4e;
